--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <p Class="year-text">2020.04 ~ Now (정규직)</p>
             </div>
             <p Class="desc-text">Product Manager</p>
-            <p class="desc-subtext">- 호텔·레스토랑 할인서비스 운영총괄</p>
-            <p Class="desc-text">호텔·레스토랑 할인서비스 앱/웹 신규구축 프로젝트</p>
+            <p class="desc-subtext">- 프리미엄 할인/예약/결제 서비스 운영총괄</p>
+            <p Class="desc-text">앱/웹 신규구축 프로젝트</p>
             <p class="desc-subtext">- 대고객, 관리자 기능, 행사예약 및 결제시스템</p>
 
             <div class="float-wrap">
@@ -68,7 +68,7 @@
                 <p Class="year-text">2020.04 ~ Now</p>
             </div>
             <p Class="desc-text">1. 역할: 기획, 프론트 & 백앤드 설계, 관리자 설계, 런칭 후 운영</p>
-            <p class="desc-subtext">- 호텔·레스토랑 할인서비스 대고객/관리자 채널 신규구축<br>- 고메위크 등 현대카드 대표 Premium행사 예약시스템 구축</p>
+            <p class="desc-subtext">- 호텔·레스토랑 할인서비스 채널 신규구축<br>- 고메위크 등 현대카드 대표 프리미엄 행사 예약/결제시스템 구축</p>
             <p Class="desc-text">2. 성과</p>
             <p class="desc-subtext">- 서비스 연간 매출액 60% (20년 775억 -> 21년 1,289억), 이용 회원 숫자 8만 명 증가<br>- 신규 시스템 활용한 행사 예약 건수, 직전 회차 대비 40% 증가</p>
 
